--- a/src/App.css
+++ b/src/App.css
@@ -17,17 +17,17 @@ body {
 
   /* background: url('./img/background-cream-paper.jpg'); */
   /* background: url('./img/60thBackground.png'); */
+  background: var(--main-background-color);
 }
 
 .App {
-  padding-top: 5vh;
+  padding-top: 22vh;
   margin-bottom: 150px;
-
 }
 
 @media all and (max-width: 599px) {
   .App {
-    padding-top: 20px;
+    padding-top: 25vh;
   }
 
 }
@@ -200,6 +200,12 @@ body {
 /* dcb750 */
 /* 8e793e - dark gold color */
 
+:root {
+  --main-text-color: #805120;
+  --main-background-color: #f3eee8;
+  /* --main-background-color: #FEFDFA; */
+}
+
 .invitationBorder0::after {
   animation: border-animation0 1.5s ease-in;
   animation-fill-mode: forwards;
@@ -339,15 +345,18 @@ body {
 
   text-shadow: none;
   font-size: 1.5rem;
-  /* font-weight: bold; */
+  line-height: 1;
 }
 
 .welcomeText {
   animation-delay: 2s;
+  font-family: 'Sacramento', cursive;
+  color: var(--main-text-color);
+  font-size: 5.5rem;
 }
 
 .dressCodeText {
-  animation-delay: 5.5s;
+  animation-delay: 8.5s;
   /* font-size: 1.1rem; */
   /* font-weight: bold; */
   /* filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.4)); */
@@ -356,7 +365,7 @@ body {
 
 .bodyText,
 .invitationText {
-  color: #ffcb31;
+  color: var(--main-text-color);
   /* font-family: 'Suez One', serif; */
 
 }
@@ -372,7 +381,7 @@ body {
   /* color: #ecdc9a; */
   /* color: #ffc7a2; */
 
-  /* color: #ffcb31; */
+  /* color: var(--main-text-color); */
   /* font-family: 'Nerko One', cursive; */
   /* font-family: 'Suez One', serif; */
   font-family: 'Abril Fatface', cursive;
@@ -418,7 +427,7 @@ body {
 .dateText,
 .addressText,
 .inviteMsg {
-  color: rgba(0, 0, 0, 0.7);
+  color: var(--main-text-color);
   font-family: 'Spectral SC', serif;
   font-family: 'Cinzel Decorative', cursive;
   font-family: 'Pacifico', cursive;
@@ -434,7 +443,7 @@ body {
 }
 
 .invitationText {
-  margin: 10px 0 0 0;
+  /* margin: 10px 0 0 0; */
 
   /* color: #ffc7a2; */
   /* font-family: 'Homemade Apple', cursive; */
@@ -443,7 +452,7 @@ body {
   /* font-family: 'Stalemate', cursive; */
   /* font-family: 'Zeyada', cursive; */
   font-family: 'Dancing Script', cursive;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   /* word-spacing: -5px; */
 
@@ -453,9 +462,9 @@ body {
   /* text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.9); */
 
 
-  text-shadow: 1px 2px 0px rgba(0, 0, 0, 0.65);
+  /* text-shadow: 1px 2px 0px rgba(0, 0, 0, 0.65);
   -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.20));
-  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.20));
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.20)); */
 
   animation-delay: 4.5s;
 }
@@ -486,7 +495,7 @@ body {
   /* margin-top: 15px; */
   animation-delay: 6.5s;
 
-  color: #ffcb31;
+  color: var(--main-text-color);
   font-size: 2rem;
   /* font-family: 'Abril Fatface', cursive; */
 
@@ -540,7 +549,7 @@ body {
   .dateText,
   .addressText,
   .dressCodeText {
-    color: rgba(0, 0, 0, 0.8);
+    /* color: rgba(0, 0, 0, 0.8); */
   }
 
   .dateText,
@@ -580,18 +589,18 @@ body {
   padding-bottom: 0px;
   line-height: 2.5rem;
 
-  background: #ffcb31;
+  background: #926431;
   border: none;
   border-radius: 7px;
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.25);
 
-  color: rgba(0, 0, 0, 0.65);
+  color: #e6dec9;
   font-size: 2rem;
   font-family: 'Alex Brush', cursive;
   font-family: 'Stalemate', cursive;
   /* font-family: 'Dawning of a New Day', cursive; */
   font-weight: bold;
-  text-shadow: 1px 1px 1px rgba(167, 165, 165, 0.65);
+  /* text-shadow: 1px 1px 1px rgba(167, 165, 165, 0.65); */
 
   animation-delay: 8s;
 }
@@ -613,9 +622,9 @@ body {
 .btn:hover,
 .btn:focus {
   border: none;
-  box-shadow: 0 0 0 0.2rem gold;
+  box-shadow: 0 0 0 0.2rem #926431;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.5);
-  background: gold !important;
+  background: #926431 !important;
 }
 
 .btn.fades {
@@ -628,13 +637,15 @@ body {
 
 
 :root {
-  --animation-opacity: 0.75
+  --animation-opacity: 0.75;
+  --flowers-height: 350px;
 }
 
 
 @media all and (max-width: 599px) {
   :root {
-    --animation-opacity: 0.5
+    --animation-opacity: 0.75;
+    --flowers-height: 200px;
   }
 }
 
@@ -664,17 +675,17 @@ body {
 
 .flowers {
   position: fixed;
-  height: 500px;
+  height: var(--flowers-height);
   opacity: 0;
-  filter: saturate(2.2);
+  /* filter: saturate(2.2); */
   animation-delay: 0.75s;
 }
 
 .flowers#flowerTop {
-  top: 56px;
-  right: -55px;
+  top: 0px;
+  right: -3px;
 
-  transform: rotate(90deg) scaleX(1);
+  transform: rotate(0deg) scaleX(1);
 }
 
 .flowers#flowerBottom {
@@ -682,7 +693,7 @@ body {
   left: 0;
   /* animation-delay: 2.5s; */
 
-  transform: rotate(0deg) scaleY(-1);
+  transform: rotate(0deg) scaleX(-1) scaleY(-1);
 }
 
 .flowers#branchesWhite {
