--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,14 @@ body {
 
 .App {
   padding-top: 22vh;
+  padding-bottom: 22vh;
   margin-bottom: 150px;
 }
 
 @media all and (max-width: 599px) {
   .App {
     padding-top: 25vh;
+    padding-bottom: 0;
   }
 
 }
@@ -541,12 +543,13 @@ body {
 .citeText {
   animation-delay: 7.5s;
 
-  font-family: 'Alex Brush', cursive;
+  font-family: 'Galantis', sans-serif;
   font-size: 2.5rem;
+  color: var(--main-text-color);
 
-  text-shadow: 2px 2px 1px rgba(255, 255, 255, 0.85);
+  /* text-shadow: 2px 1px 0px rgba(0, 0, 0, 0.85);
   -webkit-filter: drop-shadow(1px 1px 5px rgba(255, 255, 255, 0.80));
-  filter: drop-shadow(1px 1px 5px rgba(255, 255, 255, 0.8));
+  filter: drop-shadow(1px 1px 5px rgba(255, 255, 255, 0.8)); */
 }
 
 @media all and (max-width: 599px) {
